--- a/style.css
+++ b/style.css
@@ -94,7 +94,7 @@ a, a:visited, a:hover{
     --maxwidth: 1920px;
     --margin: 1rem;
     width: min(var(--maxwidth), 100%); 
-    background-image: url(/images/hero-mobile.png);
+    background-image: url(images/hero-mobile.png);
     background-size: cover;
     background-repeat: no-repeat;
     padding-bottom: 255px; 
