--- a/style.css
+++ b/style.css
@@ -236,7 +236,7 @@ p{
     }
 
     .heronav{
-        background-image: url(/images/hero.png);
+        background-image: url(images/hero.png);
         
     }
 
