--- a/style.css
+++ b/style.css
@@ -242,6 +242,7 @@ p{
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin-bottom: 80px;
 }
 
 .newsletter img{
@@ -255,6 +256,10 @@ p{
     flex-wrap: wrap;
     justify-content: center;
     gap: 10px;
+}
+
+.partners2{
+    margin-bottom: 80px;
 }
 
 .partners_cards{
@@ -277,6 +282,10 @@ p{
 
 .testimonials span{
     font-size: 12px;
+}
+
+.testimonials{
+    margin-bottom: 80px;
 }
 
 
@@ -387,7 +396,7 @@ p{
     border-radius: 20px;
     padding: 40px 0;
     border: 1px solid #DDDDDD;
-
+    margin: 0 auto;
 }
 
 .contact__input{
