--- a/style.css
+++ b/style.css
@@ -45,7 +45,7 @@ h3{
 
 ul{
     list-style: none;
-    line-height: 2.8;
+    line-height: 3;
 }
 
 h2{
@@ -58,6 +58,25 @@ img {
 	border: none;
 	max-width: 100%;
 }
+
+.btn{
+
+    padding: 16px 62px;
+    margin-top: 16px;
+    margin-bottom: 16px;
+    background-color: #2091F9;
+    border-radius: 35px;
+    color: white;
+    width: min(275px, 75%);
+    display: inline-block;
+    font-size: 20px;
+    
+}
+
+.btn_wide{
+    width: 85%;
+}
+
 
 section{
     padding-top: 80px;
@@ -182,11 +201,16 @@ p{
 
 .testimonials .subtitle{
     font-size: 13px;
+    font-weight: 700;
     margin: 30px auto;
 }
 
 .testimonials h2{
     margin-bottom: 80px;
+}
+
+.testimonials .btn{
+    padding: 16px 47px;
 }
 
 .subtitle_hero{
@@ -219,6 +243,10 @@ p{
     font-size: 20px;
 }
 
+.features > img{
+    scale: 95%;
+}
+
 .features_description{
     width: 60%;
     margin: 0 auto;
@@ -228,6 +256,7 @@ p{
 .fastest{
     display: flex;
     justify-content: center;
+    align-items: center;
     flex-wrap: wrap;
     gap: 80px;
     margin-bottom: 80px;
@@ -235,7 +264,6 @@ p{
 
 .fastest img{
     scale: 90%;
-    margin: 0 auto;
 }
 
 .newsletter{
@@ -251,6 +279,14 @@ p{
     
 }
 
+.newsletter input{
+
+    border-radius: 35px;
+    padding-left: 35px;
+    width: 85%;
+
+}
+
 .partners{
     display: flex;
     flex-wrap: wrap;
@@ -258,8 +294,12 @@ p{
     gap: 10px;
 }
 
-.partners2{
+.partners_container{
     margin-bottom: 80px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 10px;
 }
 
 .partners_cards{
@@ -289,11 +329,13 @@ p{
 }
 
 
+
 .pricing{
     width: 100%;
     background-color: #252B42;
     color: white;
-    padding-bottom: 100px;
+    padding-top: 110px;
+    padding-bottom: 118px;
 }
 
 .pricing_subtitle{
@@ -344,14 +386,28 @@ p{
     color: #2091F9;
 }
 
+.price{
+    display: flex;
+    justify-content: center;
+    gap: 10px;
+}
+
 .price_number{
     display: inline-block;
     font-size: 74px;
     font-weight: var(--fw-bold);
 }
 
+.price_text{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: center;
+}
+
 .info{
     display: inline-block;
+    text-align: left;
 }
 
 .contact{
@@ -377,7 +433,7 @@ p{
     display: flex;
     align-items: center;
     gap: 15px;
-    line-height: 3;
+    
 }
 
 .contact__info{
@@ -386,9 +442,11 @@ p{
     flex-direction: column;
     align-items: flex-start ;
     gap: 10px;
-    width: min(80% , 285px);
+    width: min(80% , 725px);
     margin: 0 auto;
+    line-height: 23px;
 }
+
 
 .contact__form{
     order: 2;
@@ -399,6 +457,14 @@ p{
     margin: 0 auto;
 }
 
+.contact__form .btn{
+    width: 145px;
+    text-align: left;
+    padding: 18px 48px;
+    margin-left: 50px;
+    float: left;
+}
+
 .contact__input{
     display: flex;
     flex-direction: column;
@@ -406,6 +472,8 @@ p{
     justify-content: center;
     gap: 45px;
 }
+
+
 
 footer{
     display: flex;
@@ -438,6 +506,12 @@ footer p{
 }
 
 
+footer .contact__info{
+
+    align-items: center;
+}
+
+
 
 
 
@@ -457,20 +531,88 @@ footer p{
     .features__items{
         flex-wrap: unset;
         gap: 10px;
-        width: 45%;
+        width: 46%;
         margin: 0 auto 80px;
     }
 
+     .features_item{
+        width: 29.3%;
+    }
+    
+
+    .features .subtitle {
+        margin: 0 auto 80px;
+    }
+    
+    .features_title{
+        width: 90%;
+        margin: 0 auto;
+        font-size: 20px;
+        text-align: center;
+    }
+
+    .features_description{
+        text-align: center;
+        width: 90%;
+        margin: 0 auto;
+        font-size: 18px;
+    }
+
+
     .fastest{
         padding-top: 200px;
-        padding-bottom: 200px;
+        margin-bottom: 226px;
+    }
+
+    .fastest h2{
+        text-align: left;
+        width: 75%;
+    }
+
+    .fastest .subtitle{
+        text-align: left;
+        width: 100%;
+        margin: unset;
+        padding-bottom: 60px;
+    }
+
+    .fastest .btn{
+        float: left;
     }
 
     .newsletter{
-
+        padding-top: 0;
         flex-direction: row;
         justify-content: center;
-        gap: 110px;
+        gap: 113px;
+    }
+
+
+    .newsletter h2{
+        text-align: left;
+        width: 75%;
+    }
+
+    .newsletter p{
+        text-align: left;
+    }
+
+    .newsletter img{
+        margin: unset;
+    }
+
+    .newsletter form{
+        text-align: left;
+    }
+
+    .newsletter input{
+        width: 273px;
+    }
+
+    .newsletter .btn{
+        width: 172px;
+        padding: 19px 38px;
+        margin-left: 10px;
     }
 
 
@@ -479,9 +621,26 @@ footer p{
         display: flex;
         justify-content: center;
         align-items: center;
+        font-size: 16px;
     }
 
-   
+    .testimonials span {
+        font-size: 15px;
+    }
+
+    .testimonials .subtitle{
+        font-size: 28px;
+        font-weight: 400;
+    }
+
+    .partners{
+        width: 70%;
+        
+    }
+
+    .partners_container{
+        gap: unset;
+    }
 
     
     .pricing__cards{
@@ -496,6 +655,11 @@ footer p{
         margin: unset;
     }
 
+    .pricing_standard{
+        margin-top: -43px;
+        margin-bottom: -43px;
+    }
+
     .contact__flex__desktop{
         display: flex;
         justify-content: space-evenly;
@@ -507,6 +671,13 @@ footer p{
 
     .contact__form{
         order: 1;
+        margin: unset;
+    }
+
+    .contact__info_list{
+        display: flex;
+        flex-direction: column;
+        gap: 13px;
     }
 
     footer{
@@ -539,10 +710,7 @@ footer p{
         align-items: flex-start;
     }
 
-    .subtitle{
-        
-    }
-   
+  
 }
 
 @media screen and (max-width: 1023px){
@@ -556,19 +724,7 @@ footer p{
     }
 }
 
-.btn{
 
-    padding: 16px 62px;
-    margin-top: 16px;
-    margin-bottom: 16px;
-    background-color: #2091F9;
-    border-radius: 35px;
-    color: white;
-    width: min(275px, 75%);
-    display: inline-block;
-    font-size: 20px;
-    
-}
 
 
 
@@ -576,20 +732,19 @@ input, textarea{
     width: min(275px, 75%);
     background-color: #F5F5F5;
     border: 1px solid #E8E8E8;
-    padding: 19px 62px 19px 35px;
+    padding: 19px 62px 19px 20px;
 }
 
 input{
     border-radius: 35px;
-    width: 85%;
 }
+
+
 
 textarea{
     resize: none;
     border-radius: 5px;
 }
 
-.btn_wide{
-    width: 85%;
-}
+
 
