--- a/style.css
+++ b/style.css
@@ -90,6 +90,13 @@ section{
 
 body{
     background-color: white;
+    
+}
+
+.heronav.overlay{
+    position: relative;
+    background-color: rgba(255, 255, 255, 0.3);
+    z-index: 1;
 }
 
 main{
@@ -103,6 +110,7 @@ a, a:visited, a:hover{
 }
 
 
+
 .links a{
     font-size: 0.9375rem;
     color: white;
@@ -114,13 +122,25 @@ a, a:visited, a:hover{
 
 .links_mobile{
     position: fixed;
-    top: 62;
+    display: flex;
+    flex-direction: column;
+    background-color: #D8D8D8;
+    border-radius: 5px;
+    padding: 30px 75px;
+    top: 100px;
     left: -1000px;
-    transition: all .5 ease-in-out;
+    transition: all .5s ease-in-out;
+    text-align: center;
+    gap: 15px;
+    font-size: 20px;
+    z-index: 2;
 
 }
 
-
+.links_mobile.open{
+    
+    left: 20%;
+}
 
 .heronav{
     color: white;
